rename all links from xdays.info to xdays.me

--- a/content/个人知识管理的思考.md
+++ b/content/个人知识管理的思考.md
@@ -18,7 +18,7 @@ Slug: 个人知识管理的思考
 目前的1.0版本如下：
 
 [caption id="attachment\_663" align="aligncenter"
-width="430"][![Dev\_Ops\_Framework](http://www.xdays.info/wp-content/uploads/2012/08/Dev_Ops_Framework_v1.0.png "Dev_Ops_Framework_v1.0")](http://www.xdays.info/wp-content/uploads/2012/08/Dev_Ops_Framework_v1.0.png)
+width="430"][![Dev\_Ops\_Framework](/wp-content/uploads/2012/08/Dev_Ops_Framework_v1.0.png "Dev_Ops_Framework_v1.0")](/wp-content/uploads/2012/08/Dev_Ops_Framework_v1.0.png)
 Dev\_Ops\_Framework[/caption]
 
 ### 获取知识的途径
