add release brake

--- a/content/blog/驾照考试笔记.md
+++ b/content/blog/驾照考试笔记.md
@@ -4,7 +4,7 @@ date: 2019-04-29
 author: admin
 category: life
 tags: license
-slug: 驾照考试笔记
+slug: driving-license-note
 ---
 
 # 科目一
@@ -15,7 +15,7 @@ slug: 驾照考试笔记
 
 ## 考前准备
 
-系安全带，调座椅（坐的和靠的），调后视镜
+系安全带，调座椅（坐的和靠的），调后视镜，松手刹
 
 ## 倒车入库
 
