update drivling license‘

--- a/content/blog/驾照考试笔记.md
+++ b/content/blog/驾照考试笔记.md
@@ -7,6 +7,12 @@ tags: license
 slug: driving-license-note
 ---
 
+# 驾考记录
+
+* 2019-04-03：科目一通过
+* 2019-04-30：科目二第一次未通过
+* 2019-07-01：科目二第二次未通过
+
 # 科目一
 
 驾考宝典背题
@@ -66,3 +72,9 @@ slug: driving-license-note
 1. 缓慢行驶
 2. 有转弯靠左行驶，左转弯靠右行驶
 3. 最后一个右转弯陡弯，给左侧留出一些距离以便让右后轮通过，但不要太大避免左前轮压线
+
+# 注意点
+
+1. 挂挡之后，送离合之前注意检查是否送手刹
+2. 车辆熄火后，需要挂空挡点火
+3. 倒车入库要倒到位
