update driving license note

--- a/content/blog/驾照考试笔记.md
+++ b/content/blog/驾照考试笔记.md
@@ -12,6 +12,7 @@ slug: driving-license-note
 - 2019-04-03：科目一通过
 - 2019-04-30：科目二第一次未通过
 - 2019-07-01：科目二第二次未通过
+- 2021-11-01 - 2021-11-21：换驾校，科二三四一把过，看上去挺难的事情换个方法就简单了
 
 # 科目一
 
